[gd_scene load_steps=10 format=3 uid="uid://c4ojowk3mh2b6"]

[ext_resource type="Texture2D" uid="uid://ps4sfur5ahxw" path="res://characters_packed.png" id="1_scxd8"]
[ext_resource type="Script" path="res://player.gd" id="1_warbg"]
[ext_resource type="Resource" uid="uid://cxa5jbs8oo1b0" path="res://DefaultPlayerMovementData.tres" id="2_oxvxx"]

[sub_resource type="AtlasTexture" id="AtlasTexture_w2io2"]
atlas = ExtResource("1_scxd8")
region = Rect2(96, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_e2rqi"]
atlas = ExtResource("1_scxd8")
region = Rect2(120, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_hor1y"]
atlas = ExtResource("1_scxd8")
region = Rect2(120, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_gek3a"]
atlas = ExtResource("1_scxd8")
region = Rect2(96, 0, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_bm3i7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_w2io2")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e2rqi")
}],
"loop": false,
"name": &"Jumping",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hor1y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gek3a")
}],
"loop": true,
"name": &"Run",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_arvix"]
size = Vector2(12, 17)

[node name="Player" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 3
script = ExtResource("1_warbg")
move_data = ExtResource("2_oxvxx")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(0, -11)
sprite_frames = SubResource("SpriteFrames_bm3i7")
animation = &"Run"
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -8.5)
shape = SubResource("RectangleShape2D_arvix")

[node name="LadderCheck" type="RayCast2D" parent="."]
position = Vector2(0, -18)
target_position = Vector2(0, 18)
collision_mask = 16
hit_from_inside = true

[node name="DashTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="DashCooldownTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="."]
position = Vector2(0, -11)

[connection signal="timeout" from="DashTimer" to="." method="_on_dash_timer_timeout"]
[connection signal="timeout" from="DashCooldownTimer" to="." method="_on_dash_cooldown_timer_timeout"]
